done 2 strings questions